write swagger for get consultatn times
